test/error/sema/invalid-parameter-type.dsk
func f(x) -> void
    return
end
